<?xml version="1.0" encoding="utf-8"?>

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainStats_Layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/LevelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/background_light"
        android:elevation="3dp">

        <TextView
            android:id="@+id/txt_Level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_level"
            android:textSize="15sp"
            android:shadowColor="@android:color/holo_red_light"
            android:shadowDx="3.0"
            android:shadowDy="3.0"
            android:shadowRadius="3.0"
            android:layout_weight="0.00"
            android:background="@android:color/background_light"
            android:padding="4dp" />
        <TextView
            android:id="@+id/var_Level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/var_level"
            android:textSize="30sp"
            android:shadowColor="@android:color/holo_red_light"
            android:shadowDx="3.0"
            android:shadowDy="3.0"
            android:shadowRadius="3.0"
            android:textStyle="bold"
            android:layout_weight="2.33"/>

        <TextView
            android:id="@+id/txt_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:text="@string/var_title"
            android:textSize="15sp"
            android:padding="4dp" />

    </LinearLayout>
    <FrameLayout
        android:id="@+id/FrameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="4dp"
        android:layout_weight="1"
        android:paddingBottom="4dp">

        <ImageView
            android:id="@+id/img_fitGuy"
            android:contentDescription="@string/fit_guy_image"
            android:layout_width="273dp"
            android:layout_height="273dp"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:src="@drawable/stickman_t_pose"
            android:padding="20dp"
            android:background="@android:color/background_light" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:max="500"
            android:progress="450"
            android:progressDrawable="@drawable/progressbar"
            android:padding="26dp" />
    </FrameLayout>






        <LinearLayout
            android:id="@+id/linearLayout_icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/heartStat"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_horizontal"
                android:elevation="3dp"
                android:orientation="vertical"
                android:layout_margin="4dp"
                android:background="@android:color/background_light">
                <ImageView
                    android:id="@+id/img_icn_heart"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@android:color/holo_red_dark"
                    android:src="@drawable/heart"
                    android:contentDescription="@string/heart_icon_image" />
                <TextView
                    android:id="@+id/var_Heart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/var_Heart"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/txt_Heart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_heart"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mindStat"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_horizontal"
                android:elevation="3dp"
                android:orientation="vertical"
                android:layout_margin="4dp"
                android:background="@android:color/background_light">
                <ImageView
                    android:id="@+id/img_icn_mind"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@android:color/holo_blue_dark"
                    android:src="@drawable/mind"
                    android:contentDescription="@string/mind_icon_image" />
                <TextView
                    android:id="@+id/var_Mind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/var_Mind"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/txt_Mind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_Mind"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/powerStat"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_horizontal"
                android:elevation="3dp"
                android:orientation="vertical"
                android:layout_margin="4dp"
                android:background="@android:color/background_light">
                <ImageView
                    android:id="@+id/img_icn_power"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@android:color/holo_purple"
                    android:src="@drawable/strong"
                    android:contentDescription="@string/power_icon_image" />
                <TextView
                    android:id="@+id/var_Power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/var_Power"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/txt_Power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/txt_power"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/speedStat"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_horizontal"
                android:elevation="3dp"
                android:orientation="vertical"
                android:layout_margin="4dp"
                android:background="@android:color/background_light">
                <ImageView
                    android:id="@+id/img_icn_speed"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@android:color/holo_green_light"
                    android:src="@drawable/speed"
                    android:contentDescription="@string/speed_icon_image" />
                <TextView
                    android:id="@+id/var_Speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/var_Speed"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/txt_Speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_speed"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>


</LinearLayout>
